# reverend-insanity-rag

./: .gitignore  LICENSE  README.md  api.py  app.py  bm25_index.pkl  chunker.py  chunks.json  dev.sh  extract.py  indexer.py  main.py  pipeline.py  pyproject.toml  requirements.txt  retriever.py  summaries.json  summarizer.py
chroma_db/: chroma.sqlite3
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.tsx  index.css  models.ts  types.ts
frontend/src/components/: DebugPanel.tsx  InputBar.tsx  Message.tsx  SourceQuotes.tsx
