[project]
name = "ri-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "pymupdf>=1.28.0",
    "requests>=2.34.2",
    "chromadb>=0.6.0",
    "rank-bm25>=0.2.2",
    "fastapi>=0.139.0",
    "uvicorn>=0.50.1",
]
